// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PreviewImage renders a fallback image 1`] = `
<img
  alt="Item title"
  src="default-image.svg"
/>
`;

exports[`PreviewImage renders a fallback image with alt prop 1`] = `
<img
  alt="Alt prop"
  className="extra"
  src="default-image.svg"
/>
`;

exports[`PreviewImage renders a fallback image with alt prop empty 1`] = `
<img
  alt=""
  className="extra"
  src="default-image.svg"
/>
`;

exports[`PreviewImage renders a fallback image with extra props 1`] = `
<img
  alt="Item title"
  className="extra"
  src="default-image.svg"
/>
`;

exports[`PreviewImage renders a preview image 1`] = `
Array [
  <picture
    className="volto-image preview"
  >
    <img
      alt="Item title"
      role="img"
      src="http://localhost:3000/something"
    />
  </picture>,
  <noscript
    dangerouslySetInnerHTML={
      Object {
        "__html": "
              <img
                src=\\"http://localhost:3000/something\\"
                undefined
                alt=\\"Item title\\"
                class=\\"\\"
                role=\\"img\\"
                loading=\\"lazy\\"
                style=\\"width: 100%; object-fit: cover;\\"
            ",
      }
    }
  />,
]
`;

exports[`PreviewImage renders a preview image with custom size 1`] = `
Array [
  <picture
    className="volto-image large"
  >
    <img
      alt="Item title"
      role="img"
      src="http://localhost:3000/something"
    />
  </picture>,
  <noscript
    dangerouslySetInnerHTML={
      Object {
        "__html": "
              <img
                src=\\"http://localhost:3000/something\\"
                undefined
                alt=\\"Item title\\"
                class=\\"\\"
                role=\\"img\\"
                loading=\\"lazy\\"
                style=\\"width: 100%; object-fit: cover;\\"
            ",
      }
    }
  />,
]
`;

exports[`PreviewImage renders a preview image with extra props 1`] = `
Array [
  <picture
    className="volto-image preview"
  >
    <img
      alt="Item title"
      className="extra"
      role="img"
      src="http://localhost:3000/something"
    />
  </picture>,
  <noscript
    dangerouslySetInnerHTML={
      Object {
        "__html": "
              <img
                src=\\"http://localhost:3000/something\\"
                undefined
                alt=\\"Item title\\"
                class=\\"extra\\"
                role=\\"img\\"
                loading=\\"lazy\\"
                style=\\"width: 100%; object-fit: cover;\\"
            ",
      }
    }
  />,
]
`;
